infra/k8s/socket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          image: rohandocker1234/socket-depl
          ports:
            - containerPort: 8900
---
apiVersion: v1
kind: Service
metadata:
  name: socket-srv
spec:
  selector:
    app: socket
  ports:
    - name: socket
      protocol: TCP
      port: 8900
      targetPort: 8900
