infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: smmicro.dev
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: backend-srv
              servicePort: 8081
          - path: /chat/?(.*)
            backend:
              serviceName: chat-srv
              servicePort: 3001
          - path: /notifications/?(.*)
            backend:
              serviceName: notifications-srv
              servicePort: 6005
          - path: /socket/
            backend:
              serviceName: socket-srv
              servicePort: 8900
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 5173
